# rustBoot-RPi-Pico

./: .gitignore  Cargo.toml  LICENSE  Notes.md
.cargo/: config.toml
boards/bootloaders/rp2040/: Cargo.toml
boards/bootloaders/rp2040/.cargo/: config.toml
boards/bootloaders/rp2040/src/: main.rs
boards/firmware/rp2040/boot_fw_blinky_green/: Cargo.toml
boards/firmware/rp2040/boot_fw_blinky_green/.cargo/: config.toml
boards/firmware/rp2040/boot_fw_blinky_green/src/: main.rs
boards/firmware/rp2040/updt_fw_blinky_red/: Cargo.toml
boards/firmware/rp2040/updt_fw_blinky_red/.cargo/: config.toml
boards/firmware/rp2040/updt_fw_blinky_red/src/: main.rs
boards/hal/: Cargo.toml
boards/hal/src/: lib.rs
boards/hal/src/pico/: rp2040.rs
boards/rbSigner/signed_images/: convert2bin.py  signer.py
boards/update/: Cargo.toml
boards/update/src/update/: update_flash.rs
pre-compiled-binaries/: README.md
rustBoot/: Cargo.toml
rustBoot/src/: constants.rs
rustBoot/src/dt/: fit.rs
rustBoot/src/image/: image.rs
xtask/: Cargo.toml
xtask/src/: main.rs
