[package]
edition = "2021"
name = "rp2040"
version = "0.1.0"
resolver = "2"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
# cortex-m-rt1 = {package = "cortex-m-rt", version = "0.7.1", optional = true}

embedded-hal = { version = "0.2.5", features = ["unproven"] }
embedded-time = "0.12.0"

# defmt = { version = "0.3.0", optional = true }
# defmt-rtt = { version = "0.3.0", optional = true }

# panic-probe = { version = "0.3.0", features = ["print-defmt"] }

rustBoot-hal = { path = "../../hal", default-features = false, features = ["rp2040"] }
rustBoot-update = { path = "../../update", features = ["rp2040"] }

rp2040-hal = "0.5.0"
# We're using a Pico by default on this template
rp-pico = "0.4.0"
# rp2040-boot2 = "0.2.0"

# If you're not going to use a Board Support Package you'll need these:
# rp2040-hal = { version="0.4.0", features=["rt"] }
# rp2040-boot2 = "0.2.0"

# [features]
# default = ["defmt", "defmt-rtt"]
# rp2040 = ["cortex-m-rt1"]
